--- a/endless/build.gradle
+++ b/endless/build.gradle
@@ -21,7 +21,7 @@ repositories {
 }
 
 dependencies {
-    compile 'com.commonsware.cwac:adapter:1.0.1'
+    compile 'com.commonsware.cwac:adapter:1.0.+'
     compile fileTree(dir: 'libs', include: '*.jar')
 }
 
