--- a/endless/build.gradle
+++ b/endless/build.gradle
@@ -14,7 +14,7 @@ group 'com.commonsware.cwac'
 
 repositories {
     maven {
-        url "https://repo.commonsware.com.s3.amazonaws.com"
+        url "https://s3.amazonaws.com/repo.commonsware.com"
     }
 }
 
