--- a/endless/build.gradle
+++ b/endless/build.gradle
@@ -23,7 +23,7 @@ dependencies {
 }
 
 android {
-    compileSdkVersion rootProject.ext.compileSdkVersion
+    compileSdkVersion 21
     buildToolsVersion rootProject.ext.buildToolsVersion
 
     sourceSets {
